# ReadySetGO

./: .coverage  .gitignore  README.md  eg_run.py  pyproject.toml  setup.py
ModGlob/: __init__.py  modglob.py
ModGlob.egg-info/: PKG-INFO  SOURCES.txt
ModGlob/global_optimisation/: random.py
ModGlob/initialisation/: __init__.py  box.py
ModGlob/utils/: __init__.py  ase_data_processing.py
ReadySetGO/: __init__.py  readysetgo.py  setting_dicts.py
ReadySetGO/global_optimisation/: random.py
ReadySetGO/initialisation/: box.py
ReadySetGO/local_optimisation/: lo_routines.py
ReadySetGO/utils/: __init__.py  ase_data_processing.py  database_writer.py
examples/: canonical_basin_hopping_2.xyz  canonical_basin_hopping_3.xyz  wiki_eg.py
readysetgo/: __init__.py  module_manager.py  readysetgo.py  setting_dicts.py
readysetgo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
readysetgo/analysis/: energy_distribution_profile.py
readysetgo/database/: __init__.py  asedb.py  core.py
readysetgo/global_optimization/: __init__.py  basin_hopping.py  canonical_basin_hopping.py  core.py  llm_claude.py  random.py
readysetgo/initialization/: box.py
readysetgo/local_optimization/: __init__.py  asebfgs.py  core.py  lo_routines.py
readysetgo/structure_clustering/: __init__.py  clustering_algorithms.py  distance_matrix.py
readysetgo/utils/: __init__.py  ase_data_processing.py  common_functions.py
src/ReadySetGO.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/readysetgo/: __init__.py  module_manager.py  readysetgo.py
tests/utils_testing/: test_intro.py  (+5 more)
(+35 files in other folders)
